--- a/facebook.css
+++ b/facebook.css
@@ -47,3 +47,7 @@ padding-top: 25px;
 float: left;width: 400px; padding-top: 40px;
 }
 .sign_up_side h1, h3, h3+div{padding-bottom: 10px;}
+
+div.sign_up_side>input{
+	margin-bottom: 10px;font-size: 20px;width: 398px;border-radius: 6px;
+}
