--- a/facebook.css
+++ b/facebook.css
@@ -21,7 +21,14 @@
 				float: left;
 			}
 #log_in_details{
-	width: 350px;float: left;margin-left: 150px;
+	width: 370px;float: left;margin-left: 130px;
+}
+#login_button{background-color: #4267b2;
+border-color:#29487d;
+border:1px solid #666;
+	border-radius:2px;
+	padding:2px 6px;
+	color: #666;
 }
 #logo h1{
 	font-family: sans-serif;padding-top: 30px;
@@ -36,7 +43,15 @@ float: left;padding-top: 10px;margin-right: 10px;
 color: #9cb4c4;
 }
 .login_button{
-padding-top: 25px;	
+margin-top: 28px;
+background: none;
+	border:0;
+	color: #fff;
+	cursor:pointer;
+	font-weight: bold;
+	line-height: 18px;
+	text-align: center;
+	text-shadow:none;	
 }
 .float_solver{clear: both;}
 
@@ -77,7 +92,21 @@ div.sign_up_side p{
 	width: 180px;font-size: 20px;border-radius: 6px;
 }
 .sign_up_button{
+	font-family: 'Freight Sans Bold', Helvetica, Arial, sans-serif !important;
 	margin-top: 20px;margin-bottom: 20px;
+	font-size: 19px;
+	letter-spacing: normal;
+	min-width: 194px;
+	padding: 7px 20px;
+	background: linear-gradient(#67ae55,#578843);
+	box-shadow: inset 0 1px 1px #a4e388;
+	border-color:#3b6e22 #3b6e22 #2c5115;
+	border: 1px solid #3b6e22;
+	border-radius: 5px;
+	color: #fff;
+	cursor:pointer;
+	text-shadow: 0 1px 2px #8d6666;
+
 }
 .femaleradio{
 	margin-right: 20px;
@@ -85,3 +114,4 @@ div.sign_up_side p{
 .speciallink{
 	font-size: 0.75em;
 }
+
